--- a/src/stylus/components/_navigation-drawer.styl
+++ b/src/stylus/components/_navigation-drawer.styl
@@ -60,6 +60,11 @@ theme(navigation-drawer, "navigation-drawer")
 
   &--mini-variant
     overflow: hidden
+    
+    .list__group__header__prepend-icon
+      flex: 1 0 auto
+      justify-content: center
+      width: 100%
 
     .list__tile__action,
     .list__tile__avatar
